2022-01-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_bshift_pow): Fix
	diagnostics.
	* testsuite/poke.pkl/pow-diag-1.pk: Adapt expected error.
	* testsuite/poke.pkl/pow-diag-2.pk: Likewise.
	* testsuite/poke.pkl/sr-diag-1.pk: Likewise.
	* testsuite/poke.pkl/sr-diag-2.pk: Likewise.
	* testsuite/poke.pkl/sl-diag-4.pk: Likewise.
	* testsuite/poke.pkl/sl-diag-5.pk: Likewise.

2022-01-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_cast): Fix diagnostics.
	* testsuite/poke.pkl/cast-struct-diag-1.pk: Adapt expected error.
	* testsuite/poke.pkl/cast-struct-diag-2.pk: Likewise.
	* testsuite/poke.pkl/cast-struct-diag-3.pk: Likewise.

2022-01-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_neg_pos_bnot): Rename from
	pkl_typify1_ps_first_operand.
	(pkl_phase_typify1): Adapt accordingly.

2022-01-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_first_operand): Do not
	handle UNMAP.
	(pkl_tipify1_ps_op_unmap): Fix diagnostics.
	* testsuite/poke.pkl/unmap-diag-1.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2022-01-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_first_operand): Fix
	diagnostics.
	* testsuite/poke.pkl/bnot-diag-1.pk: Adapt expected error.
	* testsuite/poke.pkl/neg-diag-1.pk: Likewise.
	* testsuite/poke.pkl/pos-diag-1.pk: Likewise.

2022-01-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_op_boolean): Fix
	diagnostics.
	* testsuite/poke.pkl/and-diag-1.pk: Adapt test.
	* testsuite/poke.pkl/and-diag-2.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2022-01-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y (primary): Add location information for
	lambdas.

2022-01-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (INVALID_FIRST_OPERAND): Define.
	(INVALID_SECOND_OPERAND): Likewise.