@@ -1,0 +1,4 @@
+/* { dg-do compile } */
+
+var s = "foo"
+        * "bar"; /* { dg-error "invalid operand.*\n.*expected integral" } */
