@@ -1,0 +1,4 @@
+/* { dg-do compile } */
+
+var s = 3#B
+        * "bar"; /* { dg-error "invalid operand.*\n.*expected integral" } */
