@@ -1,0 +1,4 @@
+/* { dg-do compile } */
+
+var s = lambda void: {} /* { dg-error "invalid operand.*\n.*expected integral, offset or string" } */
+        * 2;
