@@ -1,5 +1,17 @@
 2022-01-19  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-ast.h: Prototype for pkl_type_integral_promote.
+	* libpoke/pkl-ast.c (pkl_type_integral_promote): New function.
+	* libpoke/pkl-typify.c (pkl_typify1_ps_mul): Fix diagnostics.
+	* testsuite/poke.pkl/mul-diag-1.pk: Renamed from
+	mul-diag-strings-1.pk.
+	* testsuite/poke.pkl/mul-diag-2.pk: New test.
+	* testsuite/poke.pkl/mul-diag-3.pk: Likewise.
+	* testsuite/poke.pkl/mul-diag-4.pk: Likewise.
+	* testsuite/poke.pkl/mul-diag-5.pk: Likewise.
+	
+2022-01-19  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-typify.c (pkl_typify1_ps_bshift_pow): Fix
 	diagnostics.
 	* testsuite/poke.pkl/pow-diag-1.pk: Adapt expected error.
